# tailord

./: .claudeignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PROJECT_STATUS.md  README.md  package-lock.json
backend/: .dockerignore  Dockerfile  README.md  alloy-native.config  alloy.config  docker-compose.yml  entrypoint.sh  init_db.py  loki.yml  prometheus.yml  promtail.yml  pyproject.toml  tempo.yml
backend/alembic/: env.py
backend/alembic/versions/: 0408beae0390_initial_schema.py  2696096fffe0_add_user_input_text_to_experiences.py  43311df5f40b_add_raw_resume_text_to_experiences.py  967e51ce9415_rename_resumes_to_experiences_add_.py  9f8e7d6c5b4a_add_is_requirement_to_job_chunks.py  a0b1c2d3e4f5_activate_experience_groups.py  a1b2c3d4e5f6_add_public_sharing_to_tailorings.py  a1b2c3d4e5f6_make_uploaded_at_nullable.py  a2b3c4d5e6f7_create_experience_chunks.py  a3b4c5d6e7f8_add_advocacy_blurb_to_job_chunks.py  a3b4c5d6e7f8_jobs_job_url_nullable_raw_description.py  a4b5c6d7e8f9_infrastructure_cleanups.py  a5b6c7d8e9f0_add_capture_signals.py  a7b8c9d0e1f2_add_notion_container_page_to_tailorings.py  a7b8c9d0e1f2_user_identity_refactor.py  a8b9c0d1e2f3_add_scored_content_to_job_chunks.py  a9b8c7d6e5f4_add_llm_rate_limiting_fields.py  b1c2d3e4f5a6_add_letter_content_to_tailorings.py  b2c3d4e5f6a7_profile_snapshot_and_debug_logs.py  b2d3e4f5a6b7_add_excluded_reason_to_job_chunks.py  b3c4d5e6f7a8_add_group_key_to_experience_chunks.py  b4d5e6f7a8b9_replace_experiences_with_experience_sources.py  b5d8e2f1a9c3_add_job_chunks_and_enrichment_status.py  b8c9d0e1f2a3_add_per_view_public_sharing.py  bcfb04fef2f6_make_job_extracted_job_nullable.py  bf025e128dff_tailoring_generation_telemetry.py  c2d3e4f5a6b7_add_notion_fields_to_users.py  c3d4e5f6a7b8_add_llm_call_logs.py  c4d5e6f7a8b9_add_embedding_columns.py  c4e9f1d2b3a7_add_status_to_users.py  c5d6e7f8a9b0_encrypt_credentials_column.py  c913ef0df21a_add_username_slug_and_avatar_to_users.py  c9d0e1f2a3b4_jobs_chunks_refactor.py  c9e1f2a3b4d5_add_is_admin_to_users.py  d0e1f2a3b4c5_tailorings_schema_cleanup.py  d1a2b3c4e5f6_drop_experience_source_from_job_chunks.py  d1e2f3a4b5c6_add_github_repo_details.py  d1e2f3a4b5c6_add_should_render_to_job_chunks.py  d2e3f4a5b6c7_rename_chunks_to_claims_add_groups.py  d4e5f6a7b8c9_add_notion_page_to_tailorings.py  (+22 more)
backend/app/: analyzer.py  api.py  auth.py  config.py  logging.py  main.py  metrics.py  scraper.py  telemetry.py
backend/app/api/: admin.py  analyze.py  experience.py  generate.py  integrations.py  job.py  notion.py  parse.py  profile.py  resume.py  tailorings.py  users.py
backend/app/clients/: database.py  embedding_client.py  github_client.py  llm_client.py  s3_client.py  storage_aws.py  storage_azure.py  storage_client.py
backend/app/core/: ats_client.py  crypto.py  deps_database.py  deps_user.py  extract.py  fetch.py  format_text.py  llm_call_logger.py  llm_job_analyzer.py  llm_job_parser.py  llm_pricing.py  llm_utils.py  merge.py  model_config.py  mvp_github.py  mvp_job_scraper.py  mvp_llm.py  playwright_helper.py  token_utils.py  url_validation.py
backend/app/middleware/: correlation.py
backend/app/models/: database.py  job_posting.py  mvp_schemas.py  request.py  v1_request_response.py
backend/app/prompts/: chunk_matching.py  gap_analysis.py  github_enrichment.py  github_pr_extraction.py  job_bounds.py  job_extraction.py  profile_extraction.py  profile_identity.py  requirement_matching.py  resume_polish.py  tailoring.py  user_input_parse.py
backend/app/schemas/: gaps.py  llm_outputs.py  matching.py  resume.py  tailoring_schemas.py
backend/app/services/: chunk_display.py  chunk_extractor.py  chunk_matcher.py  claim_dedup.py  experience_chunker.py  experience_embedder.py  experience_processor.py  gap_analyzer.py  github_app_scanner.py  github_enricher.py  github_pr_processor.py  group_linker.py  job_bounds_detector.py  job_extractor.py  letter_generator.py  mvp_profile_store.py  notion_export.py  parser.py  profile_extractor.py  profile_formatter.py  requirement_matcher.py  resume_polisher.py  resume_processor.py  resume_renderer.py  resume_selector.py  tailoring_generator.py
backend/app/templates/: resume.html.j2
backend/grafana/dashboards/: 01-platform-health.json  02-llm-observability.json  (+3 more)
backend/postgres-init/: 01-enable-pgvector.sql  create-test-db.sh
backend/scripts/: export_mock_data.py  test_foundry.py
backend/tests/: conftest.py  test_chunk_extractor.py
infra/: acm.tf  (+16 more)
(+434 files in other folders)
