[project]
name = "tailord-backend"
version = "0.1.0"
description = "FastAPI backend for Tailord"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "playwright",
  "openai",
  "slowapi",
  "python-dotenv",
  "pydantic_settings",
  "beautifulsoup4>=4.14.3",
  "readability-lxml>=0.8.4.1",
  "markdownify>=1.2.2",
  "requests>=2.32.5",
  "sqlalchemy>=2.0.49",
  "psycopg[binary]>=3.3.3",
  "alembic>=1.18.4",
  "boto3>=1.43.2",
  "azure-identity>=1.19.0",
  "azure-storage-blob>=12.28.0",
  "pypdf>=6.10.1",
  "python-docx>=1.1.0",
  "pdfminer-six>=20260107",
  "cryptography==47.0.0",
  "pyjwt[crypto]>=2.12.1",
  "tiktoken>=0.7.0",
  "pgvector>=0.3.0",
]

[tool.uv]

[dependency-groups]
dev = [
  "pytest",
  "pytest-mock",
  "pytest-cov",
  "httpx",
  "pre-commit",
  "ruff",
  "bandit[toml]",
  "pip-audit",
  "responses>=0.26.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=app --cov-report=term-missing"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [".venv", "__pycache__", "alembic/versions"]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]  # line length handled by formatter
