[project]
name = "tailord-backend"
version = "0.1.0"
description = "FastAPI backend for Tailord"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "playwright",
  "openai",
  "slowapi",
  "python-dotenv",
  "pydantic_settings",
  "beautifulsoup4>=4.14.3",
  "readability-lxml>=0.8.4.1",
  "markdownify>=1.2.2",
  "requests>=2.34.2",
  "sqlalchemy>=2.0.49",
  "psycopg[binary]>=3.3.4",
  "alembic>=1.18.4",
  "boto3>=1.43.11",
  "azure-identity>=1.19.0",
  "azure-storage-blob>=12.29.0",
  "pymupdf>=1.24.0",
  "python-docx>=1.1.0",
  "cryptography==47.0.0",
  "pyjwt[crypto]>=2.12.1",
  "tiktoken>=0.13.0",
  "pgvector>=0.3.0",
  "structlog>=25.0.0",
  "prometheus-client>=0.21",
  "opentelemetry-api>=1.42.0",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.27",
  "azure-monitor-opentelemetry-exporter>=1.0.0b28",
]

[tool.uv]

[dependency-groups]
dev = [
  "pytest",
  "pytest-mock",
  "pytest-cov",
  "httpx",
  "pre-commit",
  "ruff",
  "bandit[toml]",
  "pip-audit",
  "responses>=0.26.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=app --cov-report=term-missing"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [".venv", "__pycache__", "alembic/versions"]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]  # line length handled by formatter
